--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,10 @@ license = {text = "MIT"}
 #readme = "README.md"
 requires-python = "3.13"
 dependencies = [
-    "uvicorn[standart] (>=0.34.0,<0.35.0)"
+    "uvicorn[standart] (>=0.34.0,<0.35.0)",
+    "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
+    "fastapi[all] (>=0.115.12,<0.116.0)",
+    "asyncio[all] (>=3.4.3,<4.0.0)"
 ]
 
 [tool.poetry]
