--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "books-portal"
+name = "backend"
 version = "0.1.0"
 description = ""
 authors = [
@@ -7,16 +7,18 @@ authors = [
 ]
 license = {text = "MIT"}
 #readme = "README.md"
-requires-python = "3.13"
+
+requires-python = "^3.12.0"
 dependencies = [
     "uvicorn[standart] (>=0.34.0,<0.35.0)",
     "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
     "fastapi[all] (>=0.115.12,<0.116.0)",
-    "asyncio[all] (>=3.4.3,<4.0.0)"
+    "asyncio[all] (>=3.4.3,<4.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
 [tool.poetry]
-
+package-mode = false
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 fastapi = "^0.115.11"
