--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,56 +1,86 @@
+# ==============================================
 # Python
+# ==============================================
 __pycache__/
 *.py[cod]
 *.pyc
 *.pyo
+*.pyd
+*.so
+.Python
 
-# Виртуальное окружение
+# ==============================================
+# Виртуальные окружения
+# ==============================================
 venv/
 ENV/
 env/
 .venv/
+venv.bak/
+.env/
 
-# Зависимости
+# ==============================================
+# Зависимости и сборка
+# ==============================================
 *.egg-info/
+.eggs/
 dist/
 build/
 pip-wheel-metadata/
 *.whl
+*.egg
+.mypy_cache/
+.pytest_cache/
 
-# Логи и базы данных
-*.log
+# ==============================================
+# Базы данных и логи
+# ==============================================
 *.sqlite3
 *.db
+*.log
+*.sql
+*.dump
 
+# ==============================================
 # Конфиденциальные данные
+# ==============================================
 .env
 .env.local
 .secrets
 *.key
+*.cert
+*.pem
+credentials.json
 
+# ==============================================
 # IDE и редакторы
+# ==============================================
 .vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
-
-# Тестовые и временные файлы
-*.tmp
-*.bak
+*.sublime-*
+.DS_Store
 *.swp
 *~
 
-# Pre-commit cache
-.pre-commit-cache/
-
-
-
-
-# Alembic
-**/alembic.ini/
-/alembic.ini.bak
-**/cache/
+# ==============================================
+# Alembic и миграции
+# ==============================================
+alembic.ini
+alembic.ini.bak
 **/migrations/
+!migrations/__init__.py  # сохраняем пустой __init__.py
 
-# Исключения для тестовых миграций (если нужно)
-!/migrations/versions/test_*.py
+# ==============================================
+# Ruff и линтеры
+# ==============================================
+.ruff_cache/
+.mypy_cache/
+.pytest_cache/
+
+# ==============================================
+# Pre-commit и временные файлы
+# ==============================================
+.pre-commit-config.yaml
+.pre-commit-cache/
+*.tmp
+*.bak
