--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -1,25 +1,46 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0  # Обновленная версия
     hooks:
       - id: trailing-whitespace
+        exclude: >-
+          (?x)^(
+            .*/migrations/.*|
+            alembic.ini
+          )$
       - id: end-of-file-fixer
+        exclude: >-
+          (?x)^(
+            .*/migrations/.*|
+            alembic.ini
+          )$
       - id: check-yaml
       - id: check-added-large-files
-      - id: check-merge-conflict
+      - id: check-merge-conflict  # Правильное название без 's'
 
   - repo: https://github.com/psf/black
-    rev: 23.12.1
+    rev: 25.1.0  # Обновленная версия
     hooks:
       - id: black
+        exclude: >-
+          (?x)^(
+            .*/migrations/.*|
+            alembic.ini
+          )$
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 6.0.1  # Стабильная версия (не 6.x из-за возможных несовместимостей)
     hooks:
       - id: isort
-        args: ["--profile", "black", "--filter-files"]
+        args: ["--profile", "black"]
+        exclude: >-
+          (?x)^(
+            .*/migrations/.*|
+            alembic.ini
+          )$
+
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.189
+    rev: v0.11.5  # Обновленная версия
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--fix, --exclude=migrations/, --exclude=alembic.ini]
