--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 license = {text = "MIT"}
 #readme = "README.md"
 
-requires-python = ">=3.12.0"
+requires-python = ">=3.12.0,<4.0.0"
 dependencies = [
     "uvicorn[standart] (>=0.34.0,<0.35.0)",
     "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
@@ -18,7 +18,8 @@ dependencies = [
     "alembic[all] (>=1.15.2,<2.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
     "detect-secrets (>=1.5.0,<2.0.0)",
-    "ruff (>=0.11.5,<0.12.0)"
+    "ruff (>=0.11.5,<0.12.0)",
+    "loguru (>=0.7.3,<0.8.0)"
 ]
 
 [tool.poetry]
@@ -32,30 +33,27 @@ isort = ">=6.0.1"
 mypy = ">=1.15.0"
 pre-commit = ">=4.2.0"
 
+
 [tool.black]
-line-length = 119
-target-version = ['py311']
-include = '\.pyi?$'
-
-
+line-length = 120
+extend-exclude = '''
+^(
+  .*/migrations/.*|
+  alembic.ini
+)$
+'''
 
 [tool.isort]
 profile = "black"
 line_length = 120
-multi_line_output = 3
-include_trailing_comma = true
-use_parentheses = true
-ensure_newline_before_comments = true
-skip = [
-    "migrations",
-    "alembic.ini"
-]
+skip = ["migrations", "alembic.ini"]
+known_first_party = ["backend"]
 
 
 [tool.ruff]
 line-length = 120
 exclude = [
-    "migrations",
+    "**/migrations/**",
     "alembic.ini"
 ]
 
