fix creata, update and get books routers

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -40,7 +40,6 @@ pip-wheel-metadata/
 *.log
 *.sql
 *.dump
-
 # ==============================================
 # Конфиденциальные данные
 # ==============================================
@@ -51,6 +50,7 @@ pip-wheel-metadata/
 *.cert
 *.pem
 credentials.json
+config.py
 
 # ==============================================
 # IDE и редакторы
