--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,8 +10,8 @@ license = {text = "MIT"}
 
 requires-python = ">=3.12.0,<4.0.0"
 dependencies = [
-    "uvicorn[standart] (>=0.34.0,<0.35.0)",
-    "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
+    "uvicorn[standard]>=0.34.0,<0.35.0",
+    "sqlalchemy>=2.0.39,<3.0.0",
     "fastapi[all] (>=0.115.12,<0.116.0)",
     "asyncio[all] (>=3.4.3,<4.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
