--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,5 +23,7 @@ EXPOSE 8000
 
 # Установка переменной среды PYTHONPATH
 ENV PYTHONPATH=/app
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
