--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "ruff (>=0.11.5,<0.12.0)",
     "loguru (>=0.7.3,<0.8.0)",
     "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "npm (>=0.1.1,<0.2.0)"
 ]
 
 [tool.poetry]
