--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "npm (>=0.1.1,<0.2.0)"
+    "npm (>=0.1.1,<0.2.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 [tool.poetry]
