--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "npm (>=0.1.1,<0.2.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "aioredis (>=2.0.1,<3.0.0)"
 ]
 
 [tool.poetry]
